--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -241,14 +241,14 @@ a:active {
   color: #7C7877;
  }
 
- .who_title{
-    font-size: 
+ /*.who_title{
+    font-size:; 
  }
 
 
 .who_title{
-    font-size: 
- }
+    font-size:; 
+ }*/
 
 #what_title{
   margin: 5% 0 0 0;
