layout of website complete

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -86,13 +86,14 @@
 
     <div class='row advertise'>
       <p class='advertext'> What are you waiting for? Contact us now and take the next step in your business! </p>
+      <p class='mobile_advertext'>Contact us now and take the next step in your business!</p>
       <a href="contacts/new" class='advertise_btn'>Drop Us an Email</a>
     </div>
 
     <div class="row our_mission">
       <h1 id='our_mission_title'> Our Mission </h1>
       <hr class="underline">
-        <p id='our_mission_body'> Our soul purpose is to transform non-technical communites into a well developed, fully immersive, & professional online community where everyone is connected and will be able to grow their startup or business. We are here to provide service to all startups & businesses who are in need of a helping hand to go the extra mile that will help you expand your business and keep customers coming back.   </p>
+        <p id='our_mission_body'> Our soul purpose is to transform non-technical communites into a well developed, fully immersive, & professional online community where everyone is connected and will be able to grow their startup or business. We are here to provide service to all startups & businesses who are in need of a helping hand to go the extra mile that will help you expand your business and keep customers coming back.</p>
         <a href='contacts/new' class="home_btns">Get Started Now</a>
     </div>
 </div>
