--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -212,7 +212,6 @@ a:active {
   width: 20%;
   height: 30px;
   font-size: 140%;
-  margin: 0 2% 17% 0;
   padding: 5px 5px 5px 5px;
   border: 1px solid black;
   border-radius: 5px 5px 5px 5px;
@@ -292,6 +291,15 @@ a:active {
   font-size: 140%;
   color: white;
   padding: 10px 0 10px 20px;
+}
+
+.mobile_advertext{
+  display: none;
+  float: left;
+  width: 70%;
+  font-size: 140%;
+  color: white;
+  padding: 10px 0 10px 30px;
 }
 
 .advertise_btn{
@@ -429,6 +437,14 @@ a:active {
 }
 
  /*Media Queries*/
+@media all and (max-width:1250px){
+ .advertext{
+  width: 70% !important;
+  font-size: 120% !important;
+  padding: 12px 0 10px 30px !important;
+}
+}
+
 @media all and (max-width:1150px){
   .col_4{
     width: 47% !important;
@@ -439,13 +455,27 @@ a:active {
   }
 
   .what_we_do_inner{
-    float: left;
-    margin: 3% .5% 3% .5%;
+    float: left !important;
+    margin: 3% .5% 3% .5% !important;
  }
 
-  .summary_text{
-    width: 65%;
-    margin: 0 auto;
+ .advertise_btn{
+  width: 15% !important;
+  height: 30px !important;
+  font-size: 90% !important;
+  padding: 2.5px !important;
+  margin: 10px 35px 0 10px !important;
+}
+
+ .advertext{
+  width: 70% !important;
+  font-size: 110% !important;
+  padding: 15px 0 10px 30px !important;
+}
+
+.summary_text{
+  width: 65% !important;
+  margin: 0 auto !important;
  }
 }
 
@@ -459,6 +489,14 @@ a:active {
   font-size: 120% !important; 
   padding: 0 0 5% 0 !important;
  }
+
+ .advertext{
+  display: none !important;
+}
+
+.mobile_advertext{
+  display: block !important;
+}
 }
 
  @media all and (max-width:980px){
@@ -483,6 +521,13 @@ a:active {
  }
 }
 
+@media all and (max-width:890px){
+.mobile_advertext{
+  width: 70% !important;
+  font-size: 120% !important;
+  padding: 10px 0 10px 30px !important;
+}
+}
 
 @media all and (max-width:850px){
 .nav{
@@ -537,8 +582,8 @@ nav a{
 
  .prof_pic{
   margin: 1% 0 1% 0 !important;
-  height: 350px;
-  width: 350px;
+  height: 350px !important;
+  width: 350px !important;
  }
 
  .form_div{
@@ -558,6 +603,30 @@ nav a{
   width: 20% !important;
   height: 30px !important;
   font-size: 16px !important
+}
+}
+
+@media all and (max-width:825px){
+.advertise_btn{
+  width: 15% !important;
+  font-size: 70% !important;
+  padding: 5px 5px 5px 5px !important;
+  margin: 10px 65px 0 10px !important;
+}
+}
+
+@media all and (max-width:760px){
+.mobile_advertext{
+  display: none !important;
+}
+
+.advertise_btn{
+  width: 40% !important;
+  font-size: 100% !important;
+  padding: 5px 5px 5px 5px !important;
+  margin: 10px auto !important; 
+  display: block;
+  float: none;
 }
 }
 
