fixed prof picture

--- a/app/views/static_pages/our_team.html.erb
+++ b/app/views/static_pages/our_team.html.erb
@@ -11,7 +11,7 @@
         <hr class="underline"/>
       <p class='para'>Welcome to the crew. We work hard. We code hard. And we get sh*t done.</p>
 
-      <img class='prof_pic' src='scot_prof.jpg' />
+      <img class='prof_pic' src='scot_prof.png' />
       <p class='info'> Scot Chard / CEO / Founder</p>
     </div> 
   </div>  
