--- a/app/views/contacts/create.html.erb
+++ b/app/views/contacts/create.html.erb
@@ -1,10 +1,9 @@
 <div class="grid-container">
-  <div class="row">
-    <div class="main_home">
-      <div class="col-2">
-        <h1 id='thanks_header'> Thank You For Contacting Me!</h1>
-        <p id='thanks_para'> I will be in touch with you soon.</p>
-      </div>
+  <div class="row main_home">
+    <div class="col_1">
+      <h1 id='thanks_header'> Thank You For Contacting Us!</h1>
+      <p id='thanks_para'> We will be in touch with you soon.</p>
     </div>
   </div>
 </div>  
+<br/>
