changed phone number input

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -12,7 +12,7 @@
       <br/>
       <%= f.email_field :email, :class => "input_box", :placeholder => "Email*", required: true %>
       <br/>
-      <%= f.text_field :phone_number, :class => "input_box", :placeholder => "123-345-6789*", required: true %>
+      <%= f.text_field :phone_number, :class => "input_box", :placeholder => "1233456789 ", required: true %>
       <br/>
       <%= f.text_area :message, :class => "text_area", :placeholder => "Leave Us a Message!", as: :text %>
       <br/>
