--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -441,6 +441,7 @@ a:active {
   border-radius: 5px 5px 5px 5px;
   box-shadow: 0px 5px 5px 0px grey;
   color: #7C7877;
+  -webkit-appearance: none;
 }
 
 #thanks_header{
